<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_mentor_chat_item_root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/chat_workmates_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/chat_profile_image"
            android:layout_width="@dimen/chat_profile_image_width"
            android:layout_height="@dimen/chat_profile_image_height"
            android:layout_marginStart="@dimen/chat_profile_image_margin"
            android:src="@drawable/ic_no_image_available"/>

        <LinearLayout
            android:id="@+id/chat_container_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/chat_profile_image_height"
            android:background="@drawable/chat_message"
            android:backgroundTint="@color/light_red"
            android:layout_marginTop="@dimen/chat_message_marginTop"
            android:padding="@dimen/chat_message_padding"
            android:layout_toRightOf="@+id/chat_profile_image"
            android:layout_marginStart="@dimen/chat_message_margin"
            android:layout_marginEnd="@dimen/chat_message_margin"
            android:layout_centerVertical="false">

            <TextView
                android:id="@+id/chat_message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                style="@style/ChatTextMessage"
                android:textIsSelectable="false"/>

        </LinearLayout>

        <TextView
            android:id="@+id/chat_message_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/chat_container_message"
            android:layout_alignStart="@+id/chat_container_message" />

        <LinearLayout
            android:id="@+id/chat_container_more_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/chat_container_message"
            android:layout_alignStart="@+id/chat_container_message"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chat_message_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp" />

            <ImageView
                android:id="@+id/chat_message_copy_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_copy_24dp" />
        </LinearLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/chat_current_user_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/chat_profile_image_current_user"
            android:layout_width="@dimen/chat_profile_image_width"
            android:layout_height="@dimen/chat_profile_image_height"
            android:layout_marginEnd="@dimen/chat_profile_image_margin"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_no_image_available"/>

        <LinearLayout
            android:id="@+id/chat_container_message_current_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/chat_profile_image_height"
            android:background="@drawable/chat_message"
            android:backgroundTint="@color/red"
            android:layout_marginTop="@dimen/chat_message_marginTop"
            android:padding="@dimen/chat_message_padding"
            android:layout_marginStart="@dimen/chat_message_margin"
            android:layout_marginEnd="@dimen/chat_message_margin"
            android:layout_toLeftOf="@+id/chat_profile_image_current_user"
            android:layout_centerVertical="false">

            <TextView
                android:id="@+id/chat_message_text_view_current_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ChatTextMessageCurrentUser"
                android:textIsSelectable="false"/>

        </LinearLayout>

        <TextView
            android:id="@+id/chat_message_info_current_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/chat_container_message_current_user"
            android:layout_alignEnd="@+id/chat_container_message_current_user" />

        <LinearLayout
            android:id="@+id/chat_container_more_action_current_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_below="@+id/chat_container_message_current_user"
            android:layout_alignEnd="@+id/chat_container_message_current_user"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chat_message_remove_current_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete_black_24dp" />

            <ImageView
                android:id="@+id/chat_message_copy_paste_current_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_content_copy_24dp" />


        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>